tests/conditional/conditional.exp
Error ----------------------------------------------------- conditional.js:23:10

Cannot return `x != null ? x : x != null` because:
 - number is incompatible with string.
 - boolean is incompatible with string.



Found 2 errors
